--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "chroma-js": "^2.1.1",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3"
