--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "redux-undo": "^1.0.1",
     "typescript": "^4.2.4"
   },
   "scripts": {
