--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
+    "@types/uuid": "^8.3.0",
     "chroma-js": "^2.1.1",
     "classnames": "^2.3.1",
     "lodash.range": "^3.2.0",
@@ -24,7 +25,8 @@
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux-undo": "^1.0.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
